--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
         <main class="container">
                 <div class="calc">
-                        <div class="screen">
+                        <div class="screen">0
                         </div>
 
                         <div class="buttons">
                                 <div class="row">
                                         <button class="btn clear">C</button>
-                                        <button class="btn key backspace">&#8676;</button>
+                                        <button class="btn key backspace">←</button>
                                         <button id="operator" class="btn key division"> ÷
                                         </button>
                                 </div>
